# napari-spacemouse

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
napari_spacemouse/: __init__.py  _napari.py  _osx.py  _spacemouse.py  _widget.py  napari.yaml  wrench.npz
